# pokespeare

./: .env  Cargo.toml  License  Readme.md  configuration.yaml
.github/workflows/: rust.yml
migrations/: 20210508140655_create_pokemon_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/external_api/: mod.rs  pokemon.rs  shakespeare.rs
src/external_api/test_responses/: pokemon_failure.json  shakespeare_failure.json  shakespeare_success.json
src/routes/: health_check.rs  mod.rs  pokemon_description.rs
src/storage/: db.rs
tests/: health_check.rs
tests/integration/: health_check.rs  main.rs  pokemon_description.rs  spawn.rs
