[package]
name = "pokespeare"
version = "0.1.0"
authors = ["Krishna Sundarram <krishna.sundarram@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.0.0-beta.6"
actix-service = "2.0.0"
actix-web = "4.0.0-beta.6"
config = "0.11.0"
serde = { version = "1", features = ["derive"]}

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "migrate"
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "pokespeare"

[dev-dependencies]
actix-rt = "2.2.0"
reqwest = "0.11.3"
tokio = "1.5.0"
